# deep-agents

./: .flake8  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
examples/: basic_usage.py
src/: __init__.py  app.py
src/adapters/: __init__.py  langchain_adapter.py
src/adapters/ollama/: __init__.py  chat.py
src/adapters/watsonx/: __init__.py  chat.py
src/backend/: __init__.py  chat.py  types.py
src/deep_research/: agent.py
src/deep_research/research_agent/: __init__.py  prompts.py  tools.py
src/text2sql/: AGENTS.md  agent.py
src/text2sql-agent/: README.md
src/text2sql-agent/skills/query-writing/: SKILL.md
src/text2sql-agent/skills/schema-exploration/: SKILL.md
tests/: test_llm_proxy.py
